@@ -24,6 +24,7 @@ version 0.99.5-rc1 - 12-Nov-2010
 . [FIX] Texture2D: addPVRTCImage: -> addPVRImage: since it also loads non-compressed PVR images
 . [FIX] Texture2D: Use 32-bit textures when creating labels on ARM_NEON hardware. Performance improvement.
 . [FIX] Tiled: images can be relative to source map (issue #787)
+. [FIX] Tiled: TMXLayer checks for correct GID (issue #742)
 
 version 0.99.5-rc0 - 25-Oct-2010
 . [NEW] AnimationCache: New class. It deprecates the CCSprite#animation methods (issue #848)
